Fixed: Some mobile browsers don't fire unload event

--- a/test/index.html
+++ b/test/index.html
@@ -5,9 +5,7 @@
 </head>
 <body>
 <pre>This is a test site for ga-lite.
-Navigate away from this browser tab
-and you should see a hit in your
-console.
+You should see a hit in your console.
 <a href=".">Reload</a></pre>
 
 <script src="/ga-lite.min.js" async></script>
