fix galite test url

--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
 You should see a hit in your console.
 <a href=".">Reload</a></pre>
 
-<script src="/ga-lite.js" async></script>
+<script src="../src/ga-lite.js" async></script>
 <script>
 var galite = galite || {};
 galite.UA = 'UA-XXXXXX'; // Insert your tracking code here
