fix test reload

--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
 <body>
 <pre>This is a test site for ga-lite.
 You should see a hit in your console.
-<a href=".">Reload</a></pre>
+<a href="index.html">Reload</a></pre>
 
 <script src="../src/ga-lite.js" async></script>
 <script>
