--- a/test/browser-tests/html/index.html
+++ b/test/browser-tests/html/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <script src="/js/ga-lite.js"></script>
-</head>
 <body>
   <script>
+    (function(e,t,n,i,s,a,c){e[n]=e[n]||function(){(e[n].q=e[n].q||[]).push(arguments)}
+    ;a=t.createElement(i);c=t.getElementsByTagName(i)[0];a.async=true;a.src=s
+    ;c.parentNode.insertBefore(a,c)
+    })(window,document,"galite","script","/js/ga-lite.js");
+
     localStorage.uid = '12345'
     galite('create', 'UA-12345')
 
