Add ready callback for ga-lite
> Invoking the ga() command queue function by passing it a function will
  schedule the passed function for execution at the next point in the
  queue.

> Since commands are only executed after the analytics.js library is
  fully loaded, the most common reason to pass the command queue a
  function is as a callback for when the analytics.js library is loaded
  and ready.

https://developers.google.com/analytics/devguides/collection/analyticsjs/command-queue-reference#ready-callback

--- a/test/browser-tests/html/index.html
+++ b/test/browser-tests/html/index.html
@@ -10,15 +10,14 @@
     localStorage.uid = '12345'
     galite('create', 'UA-12345')
 
-    function changeTrackerPointToLocalhost (trackerName) {
-      var tracker = galite.getByName(trackerName)
+    function changeTrackerPointToLocalhost (tracker) {
       var sendTo = tracker._sendTo
       tracker._sendTo = function (url) {
         sendTo(url.replace('https://www.google-analytics.com/', 'http://localhost:8080/'))
       }
     }
 
-    changeTrackerPointToLocalhost('t0') // Default tracker
+    galite(changeTrackerPointToLocalhost)
   </script>
 </body>
 </html>
